examples/test/testpolicy6871.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6871
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key48: value30
      key4: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value32
          key37: value40
          key46: value32
      podSelector:
        matchLabels:
          key44: value48
          key39: value13
